--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "rimraf": "^3.0.2",
+    "scroll-lock": "^2.1.5",
     "terser-webpack-plugin": "^5.3.0",
     "touch": "^3.1.0",
     "ts-jest": "^27.1.3",
