--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "csstips": "^1.2.0",
     "csx": "^10.0.2",
     "eslint": "^8.6.0",
