--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "csstips": "^1.2.0",
     "csx": "^10.0.2",
+    "detect-browser": "^5.3.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.2.0",
@@ -54,7 +55,6 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "rimraf": "^3.0.2",
-    "scroll-lock": "^2.1.5",
     "terser-webpack-plugin": "^5.3.0",
     "touch": "^3.1.0",
     "ts-jest": "^27.1.3",
