--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
