improved build script, added CNAME file copy script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Homepage for the illustrious designer, Raleigh Blakeway.",
   "scripts": {
     "start": "webpack serve --mode=development --open",
-    "build": "pnpm run clean && webpack build --mode=production && nodetouch ./docs/.nojekyll",
+    "build": "pnpm clean && pnpm build:docs",
+    "build:docs": "pnpm build:prod && pnpm touch:nojekyl && pnpm copy:CNAME",
+    "build:prod": "webpack build --mode=production ",
+    "touch:nojekyl": "nodetouch ./docs/.nojekyll",
+    "copy:CNAME": "cpx CNAME ./docs",
     "clean": "rimraf docs/",
     "check": "tsc check",
     "prettier": "prettier --check src/ tests/",
@@ -39,6 +43,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "cpx": "^1.5.0",
     "csstips": "^1.2.0",
     "csx": "^10.0.2",
     "detect-browser": "^5.3.0",
